--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,201 @@
     transform: rotate(360deg);
   }
 } */
+
+.inputContainer {
+  /* height: 50vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8rem;
+}
+
+.inputContainer h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 3.5rem;
+  color: white;
+  margin-bottom: 1.5rem;
+}
+
+.inputContainer h1 span {
+  color: var(--primary-color)
+}
+
+.inputContainer div {
+  display: flex;
+  margin-bottom: 2rem;
+}
+.inputContainer input {
+  width: 100%;
+  padding: 0.5rem 0.2rem 0.5rem 0;
+  text-indent: 1rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  /* background-color: yellow; */
+}
+
+.inputContainer input::placeholder {
+  font-size: 0.9rem;
+}
+
+.inputContainer button {
+  padding: 0 1rem;
+  height: 3rem;
+  border: none;
+  cursor: pointer;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8rem;
+  background-color: var(--primary-color);
+  color: white;
+}
+
+.result {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem 1rem;
+}
+
+.result p {
+  color: white;
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--primary-color);
+  margin-right: 1rem;
+  margin-top: 1rem;
+}
+
+.result button {
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  background: var(--primary-color);
+  cursor: pointer;
+}
+
+.result button.copied {
+  background-color: white;
+  color: var(--primary-color);
+}
+
+.loading {
+  font-size: 1rem;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* Background Animate */
+
+@keyframes animate {
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+  }
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+  }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #4fbbc9;
+  overflow: hidden;
+  z-index: -1;
+}
+.background li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 19s linear infinite;
+}
+
+.background li:nth-child(0) {
+  left: 17%;
+  width: 141px;
+  height: 141px;
+  bottom: -141px;
+  animation-delay: 1s;
+}
+.background li:nth-child(1) {
+  left: 84%;
+  width: 139px;
+  height: 139px;
+  bottom: -139px;
+  animation-delay: 3s;
+}
+.background li:nth-child(2) {
+  left: 30%;
+  width: 152px;
+  height: 152px;
+  bottom: -152px;
+  animation-delay: 1s;
+}
+.background li:nth-child(3) {
+  left: 4%;
+  width: 125px;
+  height: 125px;
+  bottom: -125px;
+  animation-delay: 10s;
+}
+.background li:nth-child(4) {
+  left: 61%;
+  width: 195px;
+  height: 195px;
+  bottom: -195px;
+  animation-delay: 14s;
+}
+.background li:nth-child(5) {
+  left: 5%;
+  width: 195px;
+  height: 195px;
+  bottom: -195px;
+  animation-delay: 13s;
+}
+.background li:nth-child(6) {
+  left: 35%;
+  width: 124px;
+  height: 124px;
+  bottom: -124px;
+  animation-delay: 4s;
+}
+.background li:nth-child(7) {
+  left: 29%;
+  width: 168px;
+  height: 168px;
+  bottom: -168px;
+  animation-delay: 34s;
+}
+.background li:nth-child(8) {
+  left: 38%;
+  width: 182px;
+  height: 182px;
+  bottom: -182px;
+  animation-delay: 17s;
+}
+.background li:nth-child(9) {
+  left: 55%;
+  width: 137px;
+  height: 137px;
+  bottom: -137px;
+  animation-delay: 12s;
+}
